--- a/Index.html
+++ b/Index.html
@@ -4,15 +4,14 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title> Mikael Melo - Independent Web and Digital Developer</title>
-    <meta name="description" content="Freelance Web and Digital Developer crafting innovative online experiences on the web and social media.">
+    <title> Mikael Melo | Creative Digital Designer</title>
+    <meta name="description" content="Hi I'm Mikael, a UI & UX designer based in Dublin. Mobile and Responsive Web Design, eCommerce Websites, Branding and Logo Design.">
 </head>
 
 <body>
     <h1>Hi, I'm Mikael Melo</h1>
 
     <h2>Web / UI Designer</h2>
-
 
     <p>I created this website to showcase some of my recent web design work.</p> 
     
