--- a/Index.html
+++ b/Index.html
@@ -18,5 +18,6 @@
     <h3>Sample Web Pages</h3>
 <p><a href="exercises/page-1.html">A Tale of Two Cities</a></p>
 <p><a href="exercises/Page-2.html">Purple Rain</a></p>
+<p><a href="exercises/page-3.html">Web Page with Sections</a></p>
 </body>
 </html>
