--- a/Index.html
+++ b/Index.html
@@ -15,10 +15,18 @@
     <h2>Web / UI Designer</h2>
 
     <p>I created this website to showcase some of my recent web design work.</p> 
+
+    <img src="assets/img/feedback-for-web-design-mockups.jpg" alt="It comes while working">
     
     <h3>Sample Web Pages</h3>
+
+
 <p><a href="exercises/page-1.html">A Tale of Two Cities</a></p>
 <p><a href="exercises/Page-2.html">Purple Rain</a></p>
 <p><a href="exercises/page-3.html">Web Page with Sections</a></p>
+<p><a href="exercises/page-4.html">Vincent van Gogh</a></p> 
+<p><a href="exercises/page-5.html">Irish Tourism</a></p> 
+<p><a href="exercises/page-6.html">Smoothies</a></p> 
+<p><a href="exercises/page-7.html">Software Analytics</a></p> 
 </body>
 </html>
