--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
         <link rel="stylesheet" href="https://lunevedy.com/assets/2.0/css/lunevedy.min.css" />
         <link rel="stylesheet" href="assets/css/custom.css" />
 
-        <!-- Google Fonts -->
+        <!-- > Google Fonts-- >
         <link rel="preconnect" href="https://fonts.googleapis.com">
 		<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
 		<link href="https://fonts.googleapis.com/css2?family=Playfair+Display:wght@400;700&display=swap" rel="stylesheet">
@@ -99,7 +99,7 @@
                 <div class="col-2 col-text">
 
                     <div class="badge">WELCOME</div>
-                    <h1>// <span class="name"> Mikael Melo </span><span class="reveal-fade-in-header"> _</span></h1>
+                    <h1>|| <span class="name"> Mikael Melo </span><span class="reveal-fade-in-header"> _</span></h1>
                     <h2>I am a Web Developer Creating human-friendly interfaces for mobile and web apps.</h2>
         
                     <div class="container-btn">
