--- a/index.html
+++ b/index.html
@@ -34,14 +34,15 @@
 
         
         <!-- Google tag (gtag.js) -->
-        <script async src="https://www.googletagmanager.com/gtag/js?id=G-9FR89ZCHJ9"></script>
+        <script async src="https://www.googletagmanager.com/gtag/js?id=G-NJ4RH8PN9Q"></script>
         <script>
         window.dataLayer = window.dataLayer || [];
         function gtag(){dataLayer.push(arguments);}
         gtag('js', new Date());
 
-        gtag('config', 'G-9FR89ZCHJ9');
+        gtag('config', 'G-NJ4RH8PN9Q');
         </script>
+        
 
         <!-- Font Awesome 6 icons. Delete if not using. -->
         <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0/css/all.min.css" integrity="sha512-9usAa10IRO0HhonpyAIVpjrylPvoDwiPUiKdWk5t3PyolY1cOd4DSE0Ga+ri4AuTroPR5aQvXU9xC6qOPnzFeg==" crossorigin="anonymous" referrerpolicy="no-referrer" />
