--- a/index.html
+++ b/index.html
@@ -191,6 +191,12 @@
 
             <p class="privacy"><a href="privacy.html">Privacy &amp; Legal</a></p>
 
+            <div class="row">
+                <div class="col-md-12">
+                    <p>Copyright &copy; 2024 Mikael Melo. All rights reserved.</p>
+                </div>
+            </div>
+
         </footer>
 
         <script src="https://lunevedy.com/assets/js/lunevedy.js"></script>
