--- a/contact/index.html
+++ b/contact/index.html
@@ -37,7 +37,7 @@
     <!-- menu and 'hero block' header -->
     <nav class="theme-dark"><div class="container-menu">
         <a href="../index.html" class="brand">
-            <img src="../assets/img/logoo.png" alt="Sample website logo"></a>
+            <img src="../assets/img/logomik.png" alt="Sample website logo"></a>
         
         <div class="container-menu-links">
         
