--- a/index.html
+++ b/index.html
@@ -70,7 +70,7 @@
             <div class="container-menu">
 
                 <a href="#" class="brand">
-                    <img src="assets/img/logoo.png" alt="logo">
+                    <img src="assets/img/logomik.png" alt="logo">
                 </a>
             
                 <div class="container-menu-links">
