--- a/store/index.html
+++ b/store/index.html
@@ -61,7 +61,7 @@
     <!-- navbar start here -->
     <nav class="theme-dark"><div class="container-menu">
         <a href="../index.html" class="brand">
-            <img src="../assets/img/logoo.png" alt="Sample website logo"></a>
+            <img src="../assets/img/logomik.png" alt="Sample website logo"></a>
         
         <div class="container-menu-links">
         
