--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
         <meta name="description" content="Hello I'm Mikael, a UI & UX designer based in Dublin. Mobile and Responsive Web Design, eCommerce Websites, Branding and Logo Design.">
 
         <!-- Preload large image -->
-        <link rel="preload" href="assets/img/mikaelmelo.jpeg" as="image">
+        <link rel="preload" href="assets/img/logomik.png" as="image">
 
         <!-- Stylesheets -->
         <link rel="stylesheet" href="https://lunevedy.com/assets/2.0/css/lunevedy.min.css" />
