--- a/index.html
+++ b/index.html
@@ -189,15 +189,21 @@
                 <li><a href="#" target="_blank"><i class="fab fa-github-square"></i></a></li>
             </ul>
 
-            <p class="privacy"><a href="privacy.html">Privacy &amp; Legal</a></p>
-
-            <div class="row">
+           <div class="row">
                 <div class="col-md-12">
+                    <p class="privacy"><a href="privacy.html">Privacy &amp; Legal</a></p>
+
                     <p>Copyright &copy; 2024 Mikael Melo. All rights reserved.</p>
-                </div>
+                
+               </div>
             </div>
 
-        </footer>
+           <footer>
+                <footer>
+                    <p></p>
+                </footer>
+            </footer>
+          </footer>
 
         <script src="https://lunevedy.com/assets/js/lunevedy.js"></script>
         
